# edge

./: .gitignore  Cargo.toml  Nargo.toml  README.md
.github/: labels.yaml
.github/workflows/: check.yaml
demo/: Cargo.toml
demo/src/: counter.rs  main.rs
examples/add_external/: Nargo.toml
examples/add_external/src/: main.nr
examples/basic/: Nargo.toml
examples/basic/src/: main.nr
examples/collatz_even/: Nargo.toml
examples/collatz_even/src/: main.nr
examples/collatz_odd/: Nargo.toml
examples/collatz_odd/src/: main.nr
examples/poseidon/: Nargo.toml
examples/poseidon/src/: main.nr
examples/square_zeroth/: Nargo.toml
examples/square_zeroth/src/: main.nr
examples/swap_memory/: Nargo.toml
examples/swap_memory/src/: main.nr
frontend/: Cargo.toml
frontend/src/: error.rs  errors.rs  lib.rs  noir.rs  program.rs  proof.rs  setup.rs
frontend/src/noir/: tests.rs
frontend/src/program/: data.rs  mod.rs
frontend/src/tests/: mod.rs
frontend/tests/: inputs.rs  lib.rs  mod.rs
frontend/tests/end_to_end/: mod.rs
frontend/tests/ivc/: mod.rs
nivc/: Nargo.toml
nivc/src/: lib.nr
prover/: Cargo.toml
prover/src/: circuit.rs  digest.rs  errors.rs  fast_serde.rs  lib.rs  nifs.rs
prover/src/bellpepper/: mod.rs  r1cs.rs  shape_cs.rs  test_shape_cs.rs
prover/src/cyclefold/: circuit.rs  gadgets.rs  nifs.rs  nova_circuit.rs  snark.rs  util.rs
prover/src/gadgets/: ecc.rs  mod.rs  r1cs.rs  utils.rs
prover/src/gadgets/nonnative/: bignat.rs  mod.rs  util.rs
prover/src/provider/: bn256_grumpkin.rs  hyperkzg.rs  ipa_pc.rs  keccak.rs  kzg_commitment.rs  mod.rs  pedersen.rs  poseidon.rs  traits.rs
prover/src/provider/tests/: ipa_pc.rs  mod.rs
prover/src/provider/util/: fb_msm.rs  mod.rs
prover/src/r1cs/: mod.rs  sparse.rs  util.rs
prover/src/spartan/: batched.rs  batched_ppsnark.rs  macros.rs  mod.rs  ppsnark.rs  snark.rs
prover/src/spartan/polys/: eq.rs  identity.rs  masked_eq.rs  multilinear.rs  power.rs  univariate.rs
prover/src/spartan/sumcheck/: engine.rs  mod.rs
prover/src/supernova/: Readme.md  circuit.rs  error.rs  mod.rs  snark.rs  test.rs  utils.rs
prover/src/traits/: commitment.rs  evaluation.rs  mod.rs  snark.rs
src/: fast_serde.rs  lib.rs
src/provider/: ipa_pc.rs  kzg_commitment.rs  pedersen.rs
src/spartan/: batched.rs  batched_ppsnark.rs  ppsnark.rs  snark.rs
src/supernova/: mod.rs  snark.rs
src/traits/: evaluation.rs  snark.rs
