[workspace]
members =["prover", "frontend"]
resolver="2"

[workspace.dependencies]
bellpepper-core  ={ version="0.4.0", default-features=false }
bellpepper       ={ git="https://github.com/argumentcomputer/bellpepper", branch="dev", default-features=false }
ff               ={ version="0.13.0", features=["derive"] }
digest           ="0.10"
halo2curves      ={ version="0.6.0", features=["bits", "derive_serde"] }
sha3             ="0.10"
rayon            ="1.7"
rand_core        ={ version="0.6", default-features=false }
rand_chacha      ="0.3"
subtle           ="2.5"
neptune          ={ git="https://github.com/argumentcomputer/neptune", branch="dev", default-features=false }
generic-array    ="1.0.0"
num-bigint       ={ version="0.4", features=["serde", "rand"] }
num-traits       ="0.2"
num-integer      ="0.1"
serde            ={ version="1.0", features=["derive", "rc"] }
bincode          ="1.3"
bitvec           ="1.0"
byteorder        ="1.4.3"
thiserror        ="1.0"
group            ="0.13.0"
pairing          ="0.23.0"
tracing          ="0.1.37"
cfg-if           ="1.0.0"
once_cell        ="1.18.0"
itertools        ="0.13.0"                                                                                       # zip_eq
rand             ="0.8.5"
ref-cast         ="1.0.20"                                                                                       # allocation-less conversion in multilinear polys                                                                                  # lightens impl macros for pasta
static_assertions="1.1.0"
rayon-scan       ="0.1.0"
hex              ="0.4.3"

# grumpkin-msm has been patched to support MSMs for the pasta curve cycle
# see: https://github.com/argumentcomputer/grumpkin-msm/pull/3
grumpkin-msm={ git="https://github.com/argumentcomputer/grumpkin-msm", branch="dev" }

# wasm32 dependencies
getrandom={ version="0.2.0", default-features=false, features=["js"] }

# property testing
proptest="1.2.0"

# benchmarks
criterion={ version="0.5", features=["html_reports"] }

# dev dependencies
flate2            ="1.0"
sha2              ="0.10.7"
tracing-test      ={ version="0.2.4", features = ["no-env-filter"] }
expect-test       ="1.4.1"
anyhow            ="1.0.72"
tap               ="1.0.1"
tracing-texray    ="0.2.0"
tracing-subscriber={ version="0.3.17", features=["env-filter"] }
handlebars        ="5.1.0"
serde_json        ="1.0.1"

[profile.release]
lto          =true
codegen-units=1
panic        ="abort"

[profile.dev]
opt-level      =1
split-debuginfo="unpacked"
incremental    =true