[workspace]
members =["prover", "frontend", "demo"]
resolver="2"

[workspace.dependencies]
bellpepper       ={ git="https://github.com/argumentcomputer/bellpepper", branch="dev", default-features=false }
bellpepper-core  ={ version="0.4.0", default-features=false }
bincode          ="1.3"
bitvec           ="1.0"
byteorder        ="1.4.3"
cfg-if           ="1.0.0"
digest           ="0.10"
ff               ={ version="0.13.0", features=["derive"] }
generic-array    ="1.0.0"
group            ="0.13.0"
grumpkin-msm     ={ git="https://github.com/argumentcomputer/grumpkin-msm", branch="dev" }
halo2curves      ={ version="0.6.0", features=["bits", "derive_serde"] }
hex              ="0.4.3"
itertools        ="0.13.0"                                                                                       # zip_eq
neptune          ={ git="https://github.com/argumentcomputer/neptune", branch="dev", default-features=false }
num-bigint       ={ version="0.4", features=["serde", "rand"] }
num-integer      ="0.1"
num-traits       ="0.2"
once_cell        ="1.18.0"
pairing          ="0.23.0"
rand             ="0.8.5"
rand_chacha      ="0.3"
rand_core        ={ version="0.6", default-features=false }
rayon            ="1.7"
rayon-scan       ="0.1.0"
ref-cast         ="1.0.20"                                                                                       # allocation-less conversion in multilinear polys                                                                                  # lightens impl macros for pasta
serde            ={ version="1.0", features=["derive", "rc"] }
sha3             ="0.10"
static_assertions="1.1.0"
subtle           ="2.5"
thiserror        ="1.0"
tracing          ="0.1.37"

# wasm32 dependencies
getrandom={ version="0.2.0", default-features=false, features=["js"] }

# property testing
proptest="1.2.0"

# benchmarks
criterion={ version="0.5", features=["html_reports"] }

# dev dependencies
anyhow            ="1.0.72"
expect-test       ="1.4.1"
flate2            ="1.0"
handlebars        ="5.1.0"
serde_json        ="1.0.1"
sha2              ="0.10.7"
tap               ="1.0.1"
tracing-subscriber={ version="0.3.17", features=["env-filter"] }
tracing-test      ={ version="0.2.4", features=["no-env-filter"] }
tracing-texray    ="0.2.0"

[profile.release]
codegen-units=1
lto          =true
panic        ="abort"

[profile.dev]
codegen-units=256
debug        =true
incremental  =true
lto          =false
opt-level    =1
panic        ="unwind"
