[package]
edition="2021"
name   ="demo"
version="0.1.0"

[dependencies]
bincode           ={ workspace=true }
clap              ={ version="4.5", features=["derive"] }
edge-frontend     ={ path="../frontend", features=["demo"] }
serde_json        ={ workspace=true }
tracing           ={ workspace=true }
tracing-subscriber={ workspace=true }
