[package]
edition="2021"
name   ="edge-frontend"
version="0.1.0"

[dependencies]
bellpepper-core={ workspace=true }
edge-prover    ={ path="../prover" }
halo2curves    ={ workspace=true }
serde          ={ workspace=true }
serde_json     ={ workspace=true }
thiserror      ={ workspace=true }
tracing        ={ workspace=true }

# noir
acvm     ={ git="https://github.com/noir-lang/noir", rev="v1.0.0-beta.2" }
ark-bn254="0.5"
noirc_abi={ git="https://github.com/noir-lang/noir", rev="v1.0.0-beta.2" }

[dev-dependencies]
bincode      ={ workspace=true }
edge-frontend={ path=".", features=["demo"] }
tempdir      ="0.3.7"
tempfile     ="3.17"
tracing-test ={ workspace=true }

[features]
demo=[]
