[package]
authors     =["Pluto Engineering"]
description ="Client side proving"
edition     ="2021"
keywords    =["zkSNARKs", "cryptography", "proofs"]
license-file="LICENSE"
name        ="edge-prover"
readme      ="README.md"
repository  ="https://github.com/pluto/edge"
version     ="0.1.0"

[dependencies]
ark-ec = { workspace=true }
ark-ff = { workspace=true }
ark-r1cs-std = { workspace=true }
ark-relations = { workspace=true }
ark-serialize = { workspace=true }
ark-bn254 = { workspace=true }
bellpepper       ={ workspace=true }
bellpepper-core  ={ workspace=true }
bincode          ={ workspace=true }
bitvec           ={ workspace=true }
byteorder        ={ workspace=true }
cfg-if           ={ workspace=true }
digest           ={ workspace=true }
ff               ={ workspace=true }
generic-array    ={ workspace=true }
group            ={ workspace=true }
grumpkin-msm     ={ workspace=true }
halo2curves      ={ workspace=true }
itertools        ={ workspace=true }
neptune          ={ workspace=true }
num-bigint       ={ workspace=true }
num-integer      ={ workspace=true }
num-traits       ={ workspace=true }
once_cell        ={ workspace=true }
pairing          ={ workspace=true }
rand             ={ workspace=true }
rand_chacha      ={ workspace=true }
rand_core        ={ workspace=true }
rayon            ={ workspace=true }
rayon-scan       ={ workspace=true }
ref-cast         ={ workspace=true }
serde            ={ workspace=true }
sha3             ={ workspace=true }
static_assertions={ workspace=true }
subtle           ={ workspace=true }
thiserror        ={ workspace=true }
tracing          ={ workspace=true }

# [target.'cfg(any(target_arch = "x86_64", target_arch = "aarch64"))'.dependencies]
# grumpkin-msm has been patched to support MSMs for the pasta curve cycle
# see: https://github.com/argumentcomputer/grumpkin-msm/pull/3
# grumpkin-msm={ workspace=true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom={ workspace=true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
proptest={ workspace=true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion={ version="0.5", features=["html_reports"] }

[dev-dependencies]
anyhow            ={ workspace=true }
expect-test       ={ workspace=true }
flate2            ={ workspace=true }
handlebars        ={ workspace=true }
hex               ={ workspace=true }
serde_json        ={ workspace=true }
sha2              ={ workspace=true }
tap               ={ workspace=true }
tracing-subscriber={ workspace=true }
tracing-test      ={ workspace=true }
tracing-texray    ={ workspace=true }

# [build-dependencies]
# vergen = { workspace = true }

[features]
default=["grumpkin-msm/portable"]
# asm = ["halo2curves/asm"]
# Compiles in portable mode, w/o ISA extensions => binary can be executed on all systems.
# portable = ["grumpkin-msm/portable"]
# cuda = ["grumpkin-msm/cuda"]
